# imsheet

./: .gitignore  LICENSE  README.md  debug-db.md  electron-builder.json5  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  目录历史记录功能说明.md
.github/workflows/: release.yml
electron/main/: index.ts
electron/main/cloud.conf/: index.d.ts  index.ts
electron/main/images.db/: Instance.ts  index.d.ts  index.ts
electron/main/ipc-channel/: index.d.ts  index.ts
electron/main/store/: index.ts
electron/main/transport/: ComCourirer.ts
electron/main/utils/: tools.ts
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cos.rs  lib.rs  main.rs
src/components/: Edit.vue  Menu.vue
src/components/config/: SetCon.vue
src/components/gallery/: GalleryBox.vue  GalleryImageGrid.vue  GalleryPage.vue  RecyclePage.vue
src/components/upload/: ImageList.vue  ImagesBox.vue  UploadBox.vue  (+2 more)
src/cond/: cloud.conf.ts
src/ipc/: node-api.ts
src/model/: Link.ts  ResModel.ts
src/naive/: index.ts
src/router/: index.ts
src/services/: ConfigService.ts  CosService.ts  DbSyncService.ts  ImageService.ts  SqliteService.ts  TauriCosService.ts
src/store/: userStore.ts
src/stores/: UseConfigStore.ts  UseImageStore.ts
src/utils/: dir-history-demo.ts  logger-README.md  logger-usage-example.ts  logger.ts  message.ts  test-tauri-cos.ts  tools.ts
src/views/: GalleryView.vue  HomeView.vue  RecycleBinView.vue  SettingsView.vue
(+9 files in other folders)
